<menu xmlns:android="http://schemas.android.com/apk/res/android"
    app:showAsAction="always"

    xmlns:app="http://schemas.android.com/apk/res-auto">






    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_position_refresh"

        android:title="@string/refreshpos"
        />

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_top"

        android:title="@string/search_hint" />

    <item
        android:title="@string/add"
        android:id="@+id/menu_add"
        android:icon="@drawable/ic_add"
        >
        <menu >
            <item android:title="@string/create_event"
                android:id="@+id/create_event"
                android:icon="@drawable/event_cup"></item>

            <item android:title="@string/add_meeting_place"
                android:id="@+id/add_meeting_place"
                android:icon="@drawable/ic_place"></item>

        </menu>
    </item>


</menu>